--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-openid-connect": "^2.7.2",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.1",
