--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-jwt": "^7.7.5",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
