--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.0",
     "express-jwt": "^7.7.5",
     "express-oauth2-jwt-bearer": "^1.1.0",
+    "jwks-rsa": "^2.1.3",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.1",
