--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/iaw-2022/gonzarl-api#readme",
   "dependencies": {
+    "@auth0/auth0-vue": "^1.0.1",
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
